refactor: change to user repository pattern
