# backend/user/handler.go
@@ -1,0 +1,95 @@
+// internal/user/handler.go
+package user
+
+import (
+	"irl-mafia-game/auth"
+	"irl-mafia-game/models"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"golang.org/x/crypto/bcrypt"
+)
+
+type SignupRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginRequest struct {
+	Username string `json:"username" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginResponse struct {
+	ID       string `json:"id"`
+	Username string `json:"username"`
+	Token    string `json:"token"`
+}
+
+// SignupHandler godoc
+// @Summary Signup a new user
+// @Description Create a new user with username and password
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body SignupRequest true "User info"
+// @Success 200 {object} map[string]string
+// @Router /users/signup [post]
+func SignupHandler(repo UserRepository) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		var req SignupRequest
+		if err := c.BindJSON(&req); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		user := models.User{
+			Username: req.Username,
+			Password: req.Password,
+		}
+
+		if err := repo.AddUser(c.Request.Context(), user); err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, gin.H{"message": "signup successful"})
+	}
+}
+
+// LoginHandler godoc
+// @Summary Login a user
+// @Description Authenticate user and return JWT token
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body LoginRequest true "User info"
+// @Success 200 {object} LoginResponse
+// @Router /users/login [post]
+func LoginHandler(repo UserRepository) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		var req LoginRequest
+		if err := c.BindJSON(&req); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		user, err := repo.FindUserWithUsername(c.Request.Context(), req.Username)
+		if err != nil || bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(req.Password)) != nil {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid credentials"})
+			return
+		}
+
+		token, err := auth.GenerateToken(user.ID.Hex())
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to generate token"})
+			return
+		}
+
+		c.JSON(http.StatusOK, LoginResponse{
+			ID:       user.ID.Hex(),
+			Username: user.Username,
+			Token:    token,
+		})
+	}
+}
